#3 [style] dark color modify, recycler view item color add

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,7 +3,8 @@
     <color name="colorPrimary">#FF0037A0</color>
     <color name="colorSecondary">#FF2064E5</color>
     <color name="colorError">#FFE4032E</color>
-    <color name="colorBackground">#FF3C3C3C</color>
+    <color name="colorBackground">#FF202020</color>
+    <color name="colorItem">#FF3C3C3C</color>
     <color name="colorText">#FFFFFFFF</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
