--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorSecondary">#FF2064E5</color>
     <color name="colorError">#FFE4032E</color>
     <color name="colorBackground">#FFF6F6F6</color>
+    <color name="colorItem">#FFFFFFFF</color>
     <color name="colorText">#FF000000</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
