--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,5 +8,6 @@
         <item name="android:textColor">@color/colorText</item>
         <item name="android:windowBackground">@color/colorBackground</item>
         <item name="android:windowLightStatusBar">true</item>
+        <item name="android:textAppearance">@style/text.body</item>
     </style>
 </resources>
