--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,4 +10,8 @@
         <item name="android:windowLightStatusBar">true</item>
         <item name="android:textAppearance">@style/text.body</item>
     </style>
+
+    <style name="SplashTheme" parent="Theme.AlBang">
+        <item name="android:windowBackground">@drawable/layer_splash</item>
+    </style>
 </resources>
