#15 [ui/ux] : develop LoginActivity view XML
로그인 액티비티 뷰 xml 작성
google signin dependency 추가
google signin button 스타일 지정

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -9,4 +9,8 @@
         <item name="android:windowLightStatusBar">false</item>
         <item name="android:textAppearance">@style/text.body</item>
     </style>
+
+    <style name="GoogleSignInButtons">
+        <item name="colorScheme">dark</item>
+    </style>
 </resources>
