--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,4 +14,8 @@
     <style name="SplashTheme" parent="Theme.AlBang">
         <item name="android:windowBackground">@drawable/layer_splash</item>
     </style>
+
+    <style name="GoogleSignInButtons">
+        <item name="colorScheme">light</item>
+    </style>
 </resources>
