#27 [ui/ux] : 닉네임 등록 다이얼로그 뷰 xml 작성
닉네임 등록 다이얼로그 뷰 xml 작성
나눔스퀘어 regular 폰트 추가
string resource 추가

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,4 +20,9 @@
         <item name="fontFamily">@font/nanumsquare_acb</item>
         <item name="android:textSize">14sp</item>
     </style>
+
+    <style name="text.description" parent="android:TextAppearance">
+        <item name="fontFamily">@font/nanumsquare_acr</item>
+        <item name="android:textSize">12sp</item>
+    </style>
 </resources>
