--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorBackground">#FFF6F6F6</color>
     <color name="colorItem">#FFFFFFFF</color>
     <color name="colorText">#FF000000</color>
+    <color name="colorOverlay">#66000000</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
