--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,4 +26,44 @@
         <item name="cornerSizeBottomLeft">@dimen/spacing_normal</item>
         <item name="cornerSizeBottomRight">@dimen/spacing_normal</item>
     </style>
+
+    <!-- button guide -->
+    <style name="dialog.button.outline" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="cornerRadius">@dimen/spacing_normal</item>
+        <item name="strokeColor">@color/colorSecondary</item>
+        <item name="strokeWidth">2dp</item>
+        <item name="android:textAppearance">@style/text.body</item>
+        <item name="android:textColor">@color/colorSecondary</item>
+        <item name="android:paddingTop">@dimen/spacing_extra_small</item>
+        <item name="android:paddingBottom">@dimen/spacing_extra_small</item>
+        <item name="android:paddingStart">@dimen/spacing_normal</item>
+        <item name="android:paddingEnd">@dimen/spacing_normal</item>
+        <item name="android:layout_marginEnd">@dimen/spacing_small</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="dialog.button.fill" parent="Widget.MaterialComponents.Button">
+        <item name="cornerRadius">@dimen/spacing_normal</item>
+        <item name="android:textAppearance">@style/text.body</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:paddingTop">@dimen/spacing_extra_small</item>
+        <item name="android:paddingBottom">@dimen/spacing_extra_small</item>
+        <item name="android:paddingStart">@dimen/spacing_normal</item>
+        <item name="android:paddingEnd">@dimen/spacing_normal</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="button.fill" parent="Widget.MaterialComponents.Button">
+        <item name="cornerRadius">@dimen/spacing_normal</item>
+        <item name="android:textAppearance">@style/text.body</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:paddingTop">@dimen/spacing_normal</item>
+        <item name="android:paddingBottom">@dimen/spacing_normal</item>
+        <item name="android:layout_marginStart">@dimen/spacing_normal</item>
+        <item name="android:layout_marginEnd">@dimen/spacing_normal</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
 </resources>
