--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -8,5 +8,6 @@
         <item name="android:windowBackground">@color/colorBackground</item>
         <item name="android:windowLightStatusBar">false</item>
         <item name="android:textAppearance">@style/text.body</item>
+        <item name="materialAlertDialogTheme">@style/dialog.normal.dark</item>
     </style>
 </resources>
