--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,7 +9,7 @@
         <item name="android:windowBackground">@color/colorBackground</item>
         <item name="android:windowLightStatusBar">true</item>
         <item name="android:textAppearance">@style/text.body</item>
-        <item name="materialAlertDialogTheme">@style/dialog.normal</item>
+        <item name="materialAlertDialogTheme">@style/dialog.normal.light</item>
     </style>
 
     <style name="SplashTheme" parent="Theme.AlBang">
