--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,17 +6,85 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".MainActivity"
+        android:padding="@dimen/spacing_normal">
 
-        <TextView
-            android:id="@+id/tv1"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_top_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <ImageView
+                android:id="@+id/iv_logo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/spacing_small"
+                android:src="@drawable/ic_logo"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
+            <ImageView
+                android:id="@+id/btn_setting"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/btn_mypage_person"
+                android:padding="@dimen/spacing_small"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragment_map"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="16dp"
+            android:name="com.naver.maps.map.MapFragment"
+            app:layout_constraintTop_toBottomOf="@id/cl_top_bar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+        <com.naver.maps.map.widget.ZoomControlView
+            android:id="@+id/map_zoom_control"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:backgroundTint="@color/colorPrimary"
+            android:layout_margin="@dimen/spacing_normal"
+            app:tint="@color/white"
+            app:layout_constraintTop_toTopOf="@id/fragment_map"
+            app:layout_constraintStart_toStartOf="@id/fragment_map" />
+
+        <com.naver.maps.map.widget.LocationButtonView
+            android:id="@+id/map_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/spacing_normal"
+            android:backgroundTint="@color/colorPrimary"
+            app:tint="@color/white"
+            app:layout_constraintEnd_toEndOf="@id/fragment_map"
+            app:layout_constraintBottom_toTopOf="@id/btn_location_application" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_location_application"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_request"
+            app:icon="@drawable/ic_btn_request"
+            app:iconTint="@color/white"
+            app:iconGravity="textStart"
+            android:textColor="@color/white"
+            android:textAppearance="@style/text.h2"
+            android:layout_margin="@dimen/spacing_normal"
+            app:layout_constraintBottom_toBottomOf="@id/fragment_map"
+            app:layout_constraintStart_toStartOf="@id/fragment_map"
+            app:layout_constraintEnd_toEndOf="@id/fragment_map" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
