--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -79,8 +79,8 @@
         <item name="cornerRadius">@dimen/spacing_normal</item>
         <item name="android:textAppearance">@style/text.body</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:paddingTop">@dimen/spacing_normal</item>
-        <item name="android:paddingBottom">@dimen/spacing_normal</item>
+        <item name="android:paddingTop">@dimen/spacing_small</item>
+        <item name="android:paddingBottom">@dimen/spacing_small</item>
         <item name="android:layout_marginStart">@dimen/spacing_normal</item>
         <item name="android:layout_marginEnd">@dimen/spacing_normal</item>
         <item name="android:layout_width">match_parent</item>
@@ -140,5 +140,6 @@
         <item name="android:paddingTop">@dimen/spacing_small</item>
         <item name="android:paddingEnd">@dimen/spacing_normal</item>
         <item name="android:paddingBottom">@dimen/spacing_normal</item>
-    
+    </style>
+
 </resources>
