#53 [ui/ux] : my방명록 목록 view xml 작성
MyGuestbookActivity view xml 작성
방명록 리사이클러뷰 아이템 xml 작성
필요 string 리소스 추가

--- a/app/src/main/res/layout/activity_mypage.xml
+++ b/app/src/main/res/layout/activity_mypage.xml
@@ -109,6 +109,7 @@
                     android:text="@string/mypage_show_my_guestbook"
                     android:textAppearance="@style/text.h2"
                     android:textColor="@color/colorText"
+                    android:onClick="@{() -> view.setOnClick(btnMyGuestbook)}"
                     style="@style/Widget.MaterialComponents.Button.TextButton"
                     app:layout_constraintStart_toEndOf="@id/view_vertical_divider1"
                     app:layout_constraintEnd_toEndOf="parent"
