#58 [feature] image glide load

--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -34,8 +34,8 @@
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/iv_heritage"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/sample_image"
+                android:layout_height="240dp"
+                android:scaleType="fitXY"
                 android:elevation="@dimen/elevation_normal"
                 android:contentDescription="@{@string/des_iv_heritage(heritageName)}"
                 app:layout_constraintEnd_toEndOf="parent"
