--- a/app/src/main/res/xml/activity_review_scene.xml
+++ b/app/src/main/res/xml/activity_review_scene.xml
@@ -17,7 +17,7 @@
     <ConstraintSet android:id="@+id/start">
         <Constraint
             android:id="@+id/iv_heritage"
-            android:layout_height="wrap_content"
+            android:layout_height="240dp"
             android:layout_width="match_parent"
             motion:layout_constraintTop_toTopOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
