--- a/app/src/main/res/layout/activity_ar_review.xml
+++ b/app/src/main/res/layout/activity_ar_review.xml
@@ -14,6 +14,7 @@
             android:layout_height="match_parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/group_fab"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
