--- a/app/src/main/res/layout/view_ar_review.xml
+++ b/app/src/main/res/layout/view_ar_review.xml
@@ -6,10 +6,11 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/tv_ar_review"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/spacing_normal"
-            android:textAppearance="@style/text.h2" />
+            android:layout_margin="@dimen/spacing_small"
+            android:textAppearance="@style/text.h3" />
 
     </androidx.cardview.widget.CardView>
 </layout>
